--- a/lab-3-client.yml
+++ b/lab-3-client.yml
@@ -1,2 +1,2 @@
-lucky-word: "Irish, Rabbit's Foot , Serendipity adasdas"
+lucky-word: "Irish, Rabbit's Foot , Serendipity WQWQQW"
 teste: "teste 01"
