--- a/lab-3-client.yml
+++ b/lab-3-client.yml
@@ -1,6 +1,6 @@
 lucky-word: "Irish, Rabbit's Foot , Serendipity teste"
 management.security.enable: false
 teste: "teste 01"
-example.name = "teste"
-example.age = "11"
-teste.teste = ""
+example.name : "teste"
+example.age : "11"
+teste.teste : ""
